src/css/scss/fluid-covid-map-viz.scss
/* ... */
/******** Override leaflet.css ********/

/** Override this from leaflet.css so that the autocomplete dropdown doesn't pop behind it **/
.leaflet-pane {
    z-index: 0;
}

/** Override the copyright section from leaflet.css so that it doesn't pop in front of popup panels on the mobile view **/
.leaflet-top,
.leaflet-bottom {
    z-index: 0;
}

/** Override the leaflet.css so that the zoom buttons shows below the search box on the mobile design **/
.leaflet-control-container {
    div:nth-child(1) {
        z-index: 0;
    }

    .leaflet-control-zoom {
        margin-top: 3rem;
        z-index: 0;

        a:hover,
        a:focus {
            box-shadow: 0 0 0 1px var(--fColor, black) inset;
        }

        a:active {
            background-color: black;
            color: white;
        }
    }
}

/******** Override accessible-autocomplete.css ********/
.fl-mapviz-query-holder input.autocomplete__input--focused {
    box-shadow: none;
    outline: none;
}

/******** The main panel **********/
.fl-mapviz-container {
    display: flex;
    flex-direction: column;
    font-size: 0.875rem;

    /* Work with other css to display the map in a full screen on the mobile view */
    height: 100%;
    width: 100%;
}

/******** The panel with the query label, the query input **********/
.fl-mapviz-query-label {
    display: none;
}

/* Contains both the search label and the filter control div */
.fl-mapviz-query-wrapper {
    position: absolute;
    width: 100%;
    z-index: 999;

    & > svg {
        height: 1.5rem;
        margin-left: 1rem;
        margin-top: 0.7rem;
        position: absolute;
        width: 1.5rem;
        z-index: 1;
    }
}

.fl-mapviz-query-holder {
    margin: 0.5rem;

    input {
        background-color: white;
        border: 1px solid black;
        border-radius: 1.5rem;
        height: 2rem;
        padding-left: 2.5rem;
        width: 100%;
    }

    /** This markup is injected by the autocomplete widget **/
    ul {
        margin-block-end: 0;
        margin-block-start: 0;
    }
}

/** The reset icon in the query box **/
.fl-mapviz-query-reset-holder {
    position: relative;
}

.fl-mapviz-query-reset {
    height: 1rem;
    position: absolute;
    right: 0.6rem;
    top: 0.5rem;
    z-index: 900;

    svg {
        height: 1rem;
        width: 1rem;
        z-index: 1;
    }
}

/******** The accessibility filters panel **********/
.fl-mapviz-filter-count-holder-on-desktop {
    display: none;
}

.fl-mapviz-filter-panel {
    max-width: 100%;

    h2 {
        margin: 1rem 0;
        margin-left: auto;
        margin-right: auto;
        text-align: left;
        text-transform: uppercase;
    }
}

.fl-mapviz-filter-panel-title {
    display: flex;
    flex-direction: row;
}

/* All a11y feature list */
.fl-mapviz-filters {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    margin: 0;
    overflow-y: scroll;
    padding: 0;
}

/* Individual a11y feature */
.fl-mapviz-filter {
    align-items: center;
    display: flex;
    flex-direction: row;
    height: 6rem;
    justify-content: center;
}

/* The icon for each a11y feature */
.fl-mapviz-filter-icon {
    height: 3rem;
    padding: 0.3rem;
    width: 3rem;
}

/* The tooltip icon for each a11y feature */
.tooltip-svg-internal-char-class {
    fill: var(--tooltip-char-color, black);
}

.tooltip-svg-internal-bg-class {
    fill: var(--tooltip-bg-color, transparent);
    stroke: var(--tooltip-bg-stroke-color, black);
}

.fl-mapviz-filter-tooltip-icon {
    height: 1.3rem;
    margin-bottom: 3.125rem;
    width: 1.3rem;

    &:active {
        --tooltip-char-color: white;
        --tooltip-bg-color: black;
    }

    svg {
        height: 1.25rem;
        width: 1.25rem;
    }
}

/* The title of each a11y feature */
.fl-mapviz-filter-title {
    display: inline-block;
    font-stretch: condensed;
    font-style: normal;
    margin-top: 2px;
    text-transform: uppercase;
    width: 15rem;
}

/* The checkbox for each a11y feature */

.fl-checkbox-holder {
    margin-right: 0.5rem;

    & > span {
        border: 2px solid black;
        box-sizing: border-box;
        display: inline-block;
        height: 2rem;
        position: relative;
        vertical-align: middle;
        width: 2rem;
    }

    & > input {
        -webkit-appearance: none;
        appearance: none;
    }

    & > span:hover,
    & > input:focus + span {
        outline: 1px solid #000;
        outline-offset: 2px;
    }

    svg {
        /** The checkbox is not quite correctly sized and doesn't fill its box **/
        height: 2rem;
        left: -0.125rem;

        /** On Firefox, the SVG will take up an unpredictable amount of extra space in the layout **/
        position: absolute;
        top: -0.125rem;
        width: 2rem;
    }

    input:not(:checked) + span .fl-checkbox-selected {
        display: none;
    }
}

/* The parent container of filter buttons */
.fl-mapviz-filter-buttons {
    display: flex;
    justify-content: space-evenly;
}

/* "apply filters" and "reset filters" buttons */
.fl-mapviz-apply-filters,
.fl-mapviz-reset-filters {
    align-items: center;
    background-color: transparent;
    border-style: none;
    display: inline-flex;
    height: 3rem;
    width: 11rem;

    svg {
        fill: none;
        height: 1rem;
        width: 1rem;
    }

    &:hover .fl-mapviz-icon-shadow,
    &:focus .fl-mapviz-icon-shadow {
        box-shadow: 0 0 4px var(--fColor, rgba(0, 0, 0, 0.25)) inset, 0 0 0 1px var(--fColor, black);
    }
}

/******** Expand/collapse button for the city list panel, the search results panel and the a11y filter panel ********/
.fl-mapviz-expand-collapse-button-wrapper {
    background-color: #c4c4c4;
    border-radius: 1rem 1rem 0 0;
    display: flex;
    justify-content: center;
}
/* ... */

